[UPDATE] Changed several internal class and package names to better reflect their functionality: * Package tools was renamed to package components. * VariableX.java classes are now called VariantX.java. * Removed exceptions that were used in very few or single scenarios.